// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClusterStateIcon /> renders correctly for error status 1`] = `
<ErrorCircleOIcon
  className="clusterstate"
  color="#c9190b"
  noVerticalAlign={false}
  size="sm"
  title={null}
/>
`;

exports[`<ClusterStateIcon /> renders correctly for installing status 1`] = `
<InProgressIcon
  className="clusterstate"
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
  title={null}
/>
`;

exports[`<ClusterStateIcon /> renders correctly for patching status 1`] = `
<HourglassHalfIcon
  className="clusterstate"
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
  title={null}
/>
`;

exports[`<ClusterStateIcon /> renders correctly for pending status 1`] = `
<HourglassHalfIcon
  className="clusterstate"
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
  title={null}
/>
`;

exports[`<ClusterStateIcon /> renders correctly for ready status 1`] = `
<OkIcon
  className="clusterstate"
  color="#92d400"
  noVerticalAlign={false}
  size="sm"
  title={null}
/>
`;

exports[`<ClusterStateIcon /> renders correctly for uninstalling status 1`] = `
<BanIcon
  className="clusterstate"
  color="#c9190b"
  noVerticalAlign={false}
  size="sm"
  title={null}
/>
`;

exports[`<ClusterStateIcon /> renders correctly for unknown status 1`] = `
<UnknownIcon
  className="clusterstate"
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
  title={null}
/>
`;

exports[`<ClusterStateIcon /> renders correctly for warning status 1`] = `
<WarningTriangleIcon
  className="clusterstate"
  color="#f0ab00"
  noVerticalAlign={false}
  size="sm"
  title={null}
/>
`;
